CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.3

	- When adding printers from the web interface, the dynamic updates of
	  the device list made it hard to pick a device (STR #3406)
	- Fixed a typo in the web interface admin page template (STR 3403)
	- The web interface did not preserve the "printer is shared" state when
	  modifying a printer (STR #3390)
	- The PPD compiler incorrectly inserted translations of empty strings
	  (STR #3411)
	- The scheduler did not reset the SIGPIPE handler of child processes
	  (STR #3399)
	- cupsGetNamedDest() incorrectly returned the default printer if the
	  named printer did not exist (STR #3397)
	- Fixed a GNU TLS error handling bug (STR #3381)


CHANGES IN CUPS V1.4.2

	- SECURITY: The CUPS web interface was vulnerable to several XSS and
	  HTTP header/body attacks via attribute injection (STR #3367,
	  STR #3401)
	- Fixed localization errors (STR #3359, STR #3372, STR #3380, STR #3387)
	- The documentation for classes.conf and printers.conf did not provide
	  the correct instructions for manual changes (STR #3351)
	- The scheduler did not always rebuild printer cache files when the
	  driver was changed (STR #3356)
	- The documentation makefile failed to install localizations when using
	  newer versions of Bash (STR #3360)
	- The configure script did not use the --with-xinetd value for the
	  default LPD configuration path (STR #3347)
	- The configure script incorrectly required glib for DBUS support
	  (STR #3346)
	- The cupstestppd program incorrectly reported filters with bad
	  permisssions as missing (STR #3363)
	- The cups.desktop file used the wrong locale names (STR #3358)
	- cupsSideChannelRead() did not return an error for short reads.
	- The installed PAM configuration file did not use the correct options
	  with the pam_unix2 module (STR #3313)
	- The scheduler did not preserve default options that contained special
	  characters (STR #3340)